# Pythonaibrain-1.1.9

./: COPYRIGHT.txt  README.md  pyproject.toml
.github/: FUNDING.yml
PyAgent/: ZENTRAA.pbcfg  __init__.py  client.py  clientAI.py  config.pbcfg  http_server.py  run-web.py  server.py  zentraa_config.py  zentraa_crypto.py  zentraa_protocol.py
PyAgent/static/: index.html  index1.html  index2.html  index3.html
pyaitk/: Memory.py  README-CORE.md  README-Config.md  README-Memory.md  Search.py  __init__.py  __main__.py  config.pbcfg  config.py  core.py  dimensions.json  intents.json
pyaitk/CLSE/: README-CLSE.md  README.md  __init__.py
pyaitk/CLSE/CLSE/: Documentary.md  README-CLSE.md  TTI_ai.py  TTI_art.py  TTI_config.py  TTI_core.py  TTI_dataset.py  TTI_main.py  TTI_model.py  TTI_pipeline.py  TTI_train.py  run_training.py
pyaitk/CLSE/CLSE/tti_models/: metrics.jsonl  model_config.json  training_history.json  training_summary.json
pyaitk/Camera/: README-Camera.md  README.md  __init__.py  mainCamera.py  test.py
pyaitk/Grammar/: README-Grammar.md  README.md  __init__.py  grammar.py  intents.json
pyaitk/ITT/: README-ITT.md  README.md
pyaitk/MathAI/: README-MathAI.md  README.md  mathai.py
pyaitk/MathAI/pythonaibrain_cas/: __init__.py
pyaitk/MathAI/pythonaibrain_cas/algebra/: __init__.py  polynomial.py  simplify.py  solve.py
pyaitk/MathAI/pythonaibrain_cas/calculus/: __init__.py  differentiate.py  integrate.py  limits.py  series.py
pyaitk/MathAI/pythonaibrain_cas/core/: __init__.py  context.py  expression.py  operations.py
pyaitk/MathAI/pythonaibrain_cas/geometry/: __init__.py  compute.py  objects.py
pyaitk/MathAI/pythonaibrain_cas/io/: __init__.py  latex.py  mathml.py
pyaitk/MathAI/pythonaibrain_cas/matrix/: __init__.py  linalg.py  matrix.py
pyaitk/MathAI/pythonaibrain_cas/number_theory/: __init__.py  modular.py  primes.py
pyaitk/MathAI/pythonaibrain_cas/parser/: __init__.py  parse.py  parser.py
pyaitk/MathAI/pythonaibrain_cas/utils/: __init__.py  pretty.py
pyaitk/NER/: README-NER.md  README.md  __init__.py  demo.py  entity_store.py  evaluator.py  logging_config.py  pipeline.py  postprocessor.py  preprocessor.py  requirements.txt  test_ner.py  trainer.py
pyaitk/PPTExtract/: README-PPTExtract.md  README.md
pyaitk/PTT/: README-PPT.md  README.md  __init__.py
pyaitk/STT/: README-STT.md  README.md  __init__.py  mainstt.py
pyaitk/SummarizerAI/: README-SummarizerAI.md  README.md  __init__.py  main.py  memory_report.json  requirements.txt  settings.py  summarizer.py
pyaitk/SummarizerAI/core/: clustering.py  data_pipeline.py
pyaitk/SummarizerAI/models/: autoencoder.py
pyaitk/TTS/: README-TTS.md  README.md  __init__.py  main.py
pyaitk/eye/: README-eye.md  README.md  __init__.py  eye.py  test.py  test2.py
